# fifu

./: .SRCINFO  .gitignore  PKGBUILD  README.md  package.json  pnpm-lock.yaml  pyproject.toml  verify_changes.py
.github/workflows/: publish.yml  release.yml
apps/api/: package.json
apps/api/src/: index.js
apps/mobile/: App.tsx  README.md  app.json  package.json
apps/mobile/src/: mock.ts  navigation.tsx  theme.ts
apps/mobile/src/api/: client.ts
apps/mobile/src/components/: Card.tsx  Chip.tsx  ListRow.tsx  PrimaryButton.tsx  ProgressBar.tsx  SecondaryButton.tsx  Section.tsx  Toggle.tsx
apps/mobile/src/screens/: DownloadsScreen.tsx  HomeScreen.tsx  LibraryScreen.tsx  OptionsScreen.tsx  ResultsScreen.tsx  (+1 more)
design-system/fifu-mobile/: MASTER.md
design-system/fifu-mobile/pages/: mobile-app.md
docs/: mobile-app-design.md  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.ts  tsconfig.json
docs/app/: globals.css  layout.tsx
docs/app/[[...slug]]/: page.tsx
docs/app/components/: download-counter.tsx  download-stats.tsx  theme-toggle.tsx
docs/content/docs/: configuration.mdx  controls.mdx  downloads.mdx  faq.mdx  features.mdx  glossary.mdx  index.mdx  installation.mdx  meta.json  options.mdx  quickstart.mdx  troubleshooting.mdx  ui-tour.mdx  usage.mdx  workflow.mdx
fifu/: __init__.py  __main__.py  app.py
fifu/screens/: __init__.py  channels.py  download.py  loading.py  options.py  search.py  video_select.py
fifu/services/: __init__.py  config.py  downloader.py  joke.py  youtube.py
fifu/styles/: __init__.py  app.tcss
