[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fifu"
version = "0.1.0"
description = "A cross-platform TUI for downloading YouTube videos from channels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "yt-dlp>=2024.1.0",
    "click>=8.1.0",
]

[project.scripts]
fifu = "fifu.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["fifu"]
